--- a/css/responsive-clock.css
+++ b/css/responsive-clock.css
@@ -1,187 +1,57 @@
+/* CLEAN FLIPCLOCK CSS - NO MORE BULLSHIT */
 
-
-@media screen and (max-width: 767px) {
-  .flipTimebox .flip-clock-wrapper ul {
-    height: 50px;
-    line-height: 50px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li {
-    line-height: 50px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li a div.up:after {
-    top: 24px;
-  }
-  .flipTimebox .flip-clock-divider {
-    height: 50px;
-  }
-  .flipTimebox .flip-clock-dot {
-    height: 6px;
-    width: 6px;
-    left: 7px;
-  }
-  .flipTimebox .flip-clock-dot.top {
-    top: 17px;
-  }
-  .flipTimebox .flip-clock-dot.bottom {
-    bottom: 8px;
-  }
-  .flipTimebox .flip-clock-divider .flip-clock-label {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -25px;
-    right: auto;
-    text-align: center;
-    white-space: nowrap;
-  }
-  .flipTimebox .flip-clock-wrapper ul {
-    width: 37px;
-    margin: 2px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li a div div.inn {
-    font-size: 38px;
-  }
-  .flipTimebox .flip-clock-meridium {
-    font-size: 20px !important;
-  }
-}
-@media screen and (max-width: 568px) {
-  .flipTimebox .flip-clock-wrapper ul {
-    margin: 2px;
-  }
-  .flipTimebox .flip-clock-divider {
-    width: 5px;
-  }
-  .flipTimebox .flip-clock-dot {
-    height: 5px;
-    width: 5px;
-    left: 0;
-  }
-  .flipTimebox .flip-clock-divider .flip-clock-label {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -25px;
-    right: auto;
-    text-align: center;
-    white-space: nowrap;
-  }
-  .flipTimebox .flip-clock-meridium {
-    font-size: 18px !important;
-  }
-}
-@media screen and (max-width: 480px) {
-  .flipTimemodulesboxes {
-    padding: 0;
-  }
-  .flipTimebox .flip-clock-divider .flip-clock-label {
-    font-size: 1em;
-  }
-  .flipTimebox .flip-clock-divider.days .flip-clock-label {
-    right: -33px;
-  }
-  .flipTimebox .flip-clock-divider.hours .flip-clock-label {
-    right: -37px;
-  }
-  .flipTimebox .flip-clock-divider.minutes .flip-clock-label {
-    right: -43px;
-  }
-  .flipTimebox .flip-clock-divider.seconds .flip-clock-label {
-    right: -45px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li a div div.inn {
-    font-size: 28px;
-  }
-  .flipTimebox .flip-clock-meridium {
-    font-size: 14px !important;
-  }
-  .flipTimebox .flip-clock-wrapper ul.flip {
-    width: 27px;
-    background-color: transparent;
-    box-shadow: none;
-    margin-left: 0;
-    margin-right: 2px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li {
-    width: 30px;
-  }
-  .flipTimebox .flip-clock-dot {
-    margin-left: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .flipTimebox {
-    margin: 50px 0 100px 20px;
-  }
-}
-@media screen and (max-width: 360px) {
-  .flipTimebox .flip-clock-divider .flip-clock-label {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -25px;
-    right: auto;
-    text-align: center;
-    white-space: nowrap;
-    font-size: 0.9em;
-    width: auto;
-  }
-  .flipTimebox .flip-clock-wrapper ul.flip {
-    width: 25px;
-    margin-left: 0;
-    margin-right: 2px;
-  }
-  .flipTimebox .flip-clock-wrapper {
-    padding-left: 5px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li {
-    width: 25px;
-  }
-  .flipTimebox .flip-clock-dot {
-    margin-left: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .flipTimebox {
-    margin: 50px 0 100px 20px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .flipTimebox .flip-clock-wrapper {
-    padding-left: 5px;
-  }
-  .flipTimebox .flip-clock-wrapper ul.flip {
-    width: 22px;
-    margin-left: 0;
-    margin-right: 1px;
-  }
-  .flipTimebox .flip-clock-wrapper ul li {
-    width: 22px;
-  }
-  .flipTimebox .flip-clock-dot {
-    margin-left: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .flipTimebox .flip-clock-divider .flip-clock-label {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -25px;
-    right: auto;
-    text-align: center;
-    white-space: nowrap;
-    font-size: 0.8em;
-  }
+/* Container centering - SIMPLE */
+.flipTimebox {
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
 }
 
+/* Base wrapper centering */
 .flip-clock-wrapper {
-  margin: 4em !important;
+  margin: 4em auto !important;
+  display: inline-block;
 }
 
+/* Universal label centering - ONE RULE FOR ALL */
 .flip-clock-divider .flip-clock-label {
   color: white !important;
   font-size: 14px !important;
   font-weight: bold !important;
-  font-family: Sofia Sans Condensed !important; 
+  font-family: 'Sofia Sans Condensed', sans-serif !important;
+  position: absolute !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  bottom: -25px !important;
+  text-align: center !important;
+  white-space: nowrap !important;
+}
+
+/* Mobile adjustments ONLY for sizing */
+@media screen and (max-width: 767px) {
+  .flip-clock-wrapper {
+    margin: 2em auto !important;
+  }
+
+  .flip-clock-divider .flip-clock-label {
+    font-size: 12px !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .flip-clock-divider .flip-clock-label {
+    font-size: 11px !important;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .flip-clock-divider .flip-clock-label {
+    font-size: 10px !important;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .flip-clock-divider .flip-clock-label {
+    font-size: 9px !important;
+  }
 }
