--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ html, body {
   height: 100vh;
   background-image: url(../images/bg.jpg);
   background-size: cover;
-  background-position: center center;
+  background-position: left center;
   background-repeat: no-repeat;
   background-attachment: local;
   opacity: 0;
@@ -358,6 +358,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-cover {
   height: 100vh;
   background-size: cover;
+  background-position: left center;
   background-repeat: no-repeat;
   position: relative;
   width: 100vw;
@@ -1129,7 +1130,7 @@ form label {
 }
 
 .fh5co-section-gray {
-  background: rgba(0, 0, 0, 0.4);
+  background: transparent;
   position: relative;
   width: 100%;
   height: 100%;
